redisInsightExternalService.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: redisinsight-service.redis.svc.cluster.local
