redisService.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-s0
  namespace: redis
spec:
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    statefulset.kubernetes.io/pod-name: redis-node-0
    # Add any additional labels to select the specific node
  ports:
    - name: redis-s0-port
      port: 26379
      targetPort: 26379
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redis-s1
  namespace: redis
spec:
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    statefulset.kubernetes.io/pod-name: redis-node-1
    # Add any additional labels to select the specific node
  ports:
    - name: redis-s1-port
      port: 26379
      targetPort: 26379
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redis-s2
  namespace: redis
spec:
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    statefulset.kubernetes.io/pod-name: redis-node-2
    # Add any additional labels to select the specific node
  ports:
    - name: redis-s2-port
      port: 26379
      targetPort: 26379
  type: ClusterIP
