service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-s0
  namespace: redis
spec:
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    apps.kubernetes.io/pod-index: '0'
    # Add any additional labels to select the specific node
  ports:
    - name: redis
      port: 26379
      targetPort: 26379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-s1
  namespace: redis
spec:
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    apps.kubernetes.io/pod-index: '1'
    # Add any additional labels to select the specific node
  ports:
    - name: redis
      port: 26379
      targetPort: 26379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-s2
  namespace: redis
spec:
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    apps.kubernetes.io/pod-index: '2'
    # Add any additional labels to select the specific node
  ports:
    - name: redis
      port: 26379
      targetPort: 26379
